p4/examples/bad/parser/non-integer-width-param.p4
const bit<muffin> ENTERPRISE = 0x1701D;
